--- a/src/default.css
+++ b/src/default.css
@@ -14,6 +14,8 @@
   --spacing-top-bottom: var(--spacing) auto calc(var(--spacing) / 2);
 
   --content-max-width: 800px;
+
+  --border-radius: 4px;
 }
 
 body {
@@ -90,9 +92,9 @@ button {
   background: var(--primary);
   border-color: var(--primary);
   color: var(--light);
-  font-size: 14px;
+  font-size: var(--font-size);
   padding: calc(var(--spacing) / 2) var(--spacing);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   cursor:pointer;
   appearance: none;
   width: auto;
@@ -108,7 +110,7 @@ border-color: var(--primary);
 input {
   background: var(--light);
   border-color: var(--secondary);
-  border-radius: 8px;
+  border-radius: calc(var(--border-radius) * 2);
   padding: calc(var(--spacing) / 2);
   width: 100%;
 }
