--- a/src/default.css
+++ b/src/default.css
@@ -14,6 +14,8 @@
   --spacing-top-bottom: var(--spacing) auto calc(var(--spacing) / 2);
 
   --content-max-width: 800px;
+
+  --border-radius: 4px;
 }
 
 body {
@@ -83,4 +85,32 @@ h5 {
 
 h6 {
   font-size: 1em;
+}
+
+input[type=submit],
+button {
+  background: var(--primary);
+  border-color: var(--primary);
+  color: var(--light);
+  font-size: var(--font-size);
+  padding: calc(var(--spacing) / 2) var(--spacing);
+  border-radius: var(--border-radius);
+  cursor:pointer;
+  appearance: none;
+  width: auto;
+}
+
+input[type=submit]:hover,
+button:hover {
+  background: var(--light);
+  color: var(--primary);
+  border-color: var(--primary);
+}
+
+input {
+  background: var(--light);
+  border-color: var(--secondary);
+  border-radius: calc(var(--border-radius) * 2);
+  padding: calc(var(--spacing) / 2);
+  width: 100%;
 }
