--- a/src/default.css
+++ b/src/default.css
@@ -16,6 +16,7 @@
   --content-max-width: 800px;
 
   --border-radius: 4px;
+  --border-width: 2px;
 }
 
 body {
@@ -108,11 +109,14 @@ button:hover {
   border-color: var(--primary);
 }
 
+textarea,
 input {
   background: var(--light);
   border-color: var(--secondary);
   border-radius: calc(var(--border-radius) * 2);
+  border-width: var(--border-width);
   padding: calc(var(--spacing) / 2);
   width: 100%;
   margin: var(--spacing-top-bottom);
+  resize: none;
 }
