--- a/src/default.css
+++ b/src/default.css
@@ -113,4 +113,6 @@ input {
   border-radius: calc(var(--border-radius) * 2);
   padding: calc(var(--spacing) / 2);
   width: 100%;
+  margin: var(--spacing-top-bottom);
+  display: block;
 }
