active color and hover added

--- a/src/default.css
+++ b/src/default.css
@@ -4,7 +4,7 @@
   --primary: #1C2531;
   --secondary: rgba(0,0,0,0.6);
   --light: white;
-
+  --hover: #2e3a4a;
   --font-family: 'Montserrat', sans-serif;
   --font-regular: 400;
   --font-bold: 700;
