primary dark and items moved

--- a/src/default.css
+++ b/src/default.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
 :root {
-  --primary: #1C2531;
+  --primary-dark: #1C2531;
+  --primary-light: #2e3a4a;
   --secondary: rgba(0,0,0,0.6);
   --light: white;
-  --hover: #2e3a4a;
   --font-family: 'Montserrat', sans-serif;
   --font-regular: 400;
   --font-bold: 700;
