--- a/src/default.css
+++ b/src/default.css
@@ -44,12 +44,12 @@ section:last-of-type {
 }
 
 a {
-  color: var(--primary);
+  color: var(--primary-dark);
   cursor: pointer;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: var(--primary);
+  color: var(--primary-dark);
   margin: var(--spacing-top-bottom);
 }
 
