--- a/src/default.css
+++ b/src/default.css
@@ -90,8 +90,8 @@ h6 {
 
 input[type=submit],
 button {
-  background: var(--primary);
-  border-color: var(--primary);
+  background: var(--primary-dark);
+  border-color: var(--primary-dark);
   color: var(--light);
   font-size: var(--font-size);
   padding: calc(var(--spacing) / 2) var(--spacing);
@@ -105,8 +105,8 @@ button {
 input[type=submit]:hover,
 button:hover {
   background: var(--light);
-  color: var(--primary);
-  border-color: var(--primary);
+  color: var(--primary-dark);
+  border-color: var(--primary-dark);
 }
 
 textarea,
