--- a/src/default.css
+++ b/src/default.css
@@ -6,7 +6,7 @@
   --secondary: rgba(0,0,0,0.6);
   --light: white;
   --succes: rgb(20, 226, 1);
-  
+
   --font-family: 'Montserrat', sans-serif;
   --font-regular: 400;
   --font-bold: 700;
@@ -125,4 +125,17 @@ input {
 
 input.valid{
   border-color : var(--succes);
+}
+
+ul li{
+  background: var(--primary-dark);
+  border-color: var(--primary-dark);
+  color: var(--light);
+  font-size: var(--font-size);
+  padding: calc(var(--spacing) / 2) var(--spacing);
+  border-radius: var(--border-radius);
+  margin: var(--spacing-top-bottom);
+  cursor:pointer;
+  appearance: none;
+  width: auto;
 }
