--- a/src/default.css
+++ b/src/default.css
@@ -5,7 +5,7 @@
   --primary-light: #2e3a4a;
   --secondary: rgba(0,0,0,0.6);
   --light: white;
-  --succes: rgb(20, 226, 1);
+  --success: rgb(20, 226, 1);
   
   --font-family: 'Montserrat', sans-serif;
   --font-regular: 400;
