--- a/src/default.css
+++ b/src/default.css
@@ -5,7 +5,9 @@
   --primary-light: #2e3a4a;
   --secondary: rgba(0, 0, 0, 0.6);
   --light: white;
-  --font-family: "Montserrat", sans-serif;
+  --success: rgb(20, 226, 1);
+
+  --font-family: 'Montserrat', sans-serif;
   --font-regular: 400;
   --font-bold: 700;
   --font-size: 16px;
@@ -126,4 +128,8 @@ input {
   width: 100%;
   margin: var(--spacing-top-bottom);
   resize: none;
+}
+
+input.valid{
+  border-color : var(--success);
 }
