--- a/src/default.css
+++ b/src/default.css
@@ -5,11 +5,8 @@
   --primary-light: #2e3a4a;
   --secondary: rgba(0, 0, 0, 0.6);
   --light: white;
-<<<<<<< HEAD
-  --succes: rgb(20, 226, 1);
-=======
   --success: rgb(20, 226, 1);
->>>>>>> master
+
 
   --font-family: 'Montserrat', sans-serif;
   --font-regular: 400;
@@ -115,7 +112,29 @@ button {
   width: auto;
 }
 
+input[type="button"],
+button {
+  background: var(--primary-dark);
+  border-color: var(--primary-dark);
+  color: var(--light);
+  font-size: var(--font-size);
+  padding: calc(var(--spacing) / 2) var(--spacing);
+  border-radius: var(--border-radius);
+  margin: var(--spacing-top-bottom);
+  cursor: pointer;
+  appearance: none;
+  width: auto;
+}
+
 input[type="submit"]:hover,
+button:hover {
+  background: var(--light);
+  color: var(--primary-dark);
+  border-color: var(--primary-dark);
+}
+
+
+input[type="button"]:hover,
 button:hover {
   background: var(--light);
   color: var(--primary-dark);
