--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,4 +1,7 @@
-.layout {
-  max-width: var(--content-max-width);
-  margin: 0px auto;
+.layout .view {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: var(--sidebar-width);
+  height: 100%;
 }
