--- a/src/default.css
+++ b/src/default.css
@@ -128,8 +128,10 @@ input {
   width: 100%;
   margin: var(--spacing-top-bottom);
   resize: none;
+  font-family: var(--font-family);
 }
 
 input.valid{
   border-color : var(--success);
 }
+
