--- a/src/default.css
+++ b/src/default.css
@@ -34,7 +34,7 @@ body {
   font-weight: var(--font-regular);
   font-size: var(--font-size);
   color: var(--secondary);
-  background: var(--white);
+  background: var(--light);
 }
 
 *,
@@ -127,11 +127,10 @@ button {
   appearance: none;
 }
 
+input[type="submit"].secondary,
 button.secondary {
-  background: var(--white);
+  background: var(--light);
   color: var(--dark);
-  cursor: pointer;
-  appearance: none;
 }
 
 input[type="submit"]:hover,
@@ -139,6 +138,12 @@ button:hover {
   background: var(--light);
   color: var(--primary-dark);
   border-color: var(--primary-dark);
+}
+
+input[type="submit"].secondary:hover,
+button.secondary:hover {
+  background: var(--primary-dark);
+  color: var(--light);
 }
 
 input.valid{
