--- a/src/default.css
+++ b/src/default.css
@@ -6,7 +6,7 @@
   --secondary: rgba(0, 0, 0, 0.6);
   --light: white;
   --success: #73AB84;
-  --danger: #EF4E45;
+  --danger: #FFEAEA;
   --info: #30C5FF;
   --danger-dark: #AA1729;
 
