--- a/src/default.css
+++ b/src/default.css
@@ -140,15 +140,30 @@ button:hover {
   border-color: var(--primary-dark);
 }
 
+textarea,
+input {
+  background: var(--light);
+  border-color: var(--secondary);
+  border-radius: calc(var(--border-radius) * 2);
+  border-width: var(--border-width);
+  padding: calc(var(--spacing) / 2);
+  width: 100%;
+  margin: var(--spacing-top-bottom);
+  resize: none;
+  font-family: var(--font-family);
+}
+
 input[type="submit"].secondary:hover,
 button.secondary:hover {
   background: var(--primary-dark);
   color: var(--light);
 }
 
+
 input.valid{
   border-color : var(--success);
 }
+
 
 input:focus,
 textarea:focus,
@@ -157,3 +172,4 @@ a:focus {
   outline: none;
   box-shadow: 0px 0px 0px 2px var(--info);
 }
+
