--- a/src/default.css
+++ b/src/default.css
@@ -120,6 +120,7 @@ button {
 }
 
 input[type="submit"],
+input[type="button"],
 button {
   background: var(--primary-dark);
   color: var(--light);
@@ -134,6 +135,7 @@ button.secondary {
 }
 
 input[type="submit"]:hover,
+input[type="button"]:hover,
 button:hover {
   background: var(--light);
   color: var(--primary-dark);
