--- a/src/default.css
+++ b/src/default.css
@@ -158,6 +158,19 @@ input.valid{
   border-color : var(--success);
 }
 
+ul li{
+  background: var(--primary-dark);
+  border-color: var(--primary-dark);
+  color: var(--light);
+  font-size: var(--font-size);
+  padding: calc(var(--spacing) / 2) var(--spacing);
+  border-radius: var(--border-radius);
+  margin: var(--spacing-top-bottom);
+  cursor:pointer;
+  appearance: none;
+  width: auto;
+}
+
 input:focus,
 textarea:focus,
 button:focus,
