--- a/src/views/Task/TaskView.css
+++ b/src/views/Task/TaskView.css
@@ -16,7 +16,31 @@ ul {
 }
 
 .chatBox{
-color: var(--black);
-text-align: left;
-background: rgb(239, 245, 245);
+  color: var(--black);
+  text-align: left;
+  background: rgb(239, 245, 245);
 }
+.popUp{  /* TODO can't override react import */
+  position: relative;
+  width: 20%;
+  z-index: 2;
+  background: rgb(219, 0, 0);
+  border: 1px solid rgb(187, 187, 187);
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px;
+  padding: 5px;
+  top: 541.512px;
+  left: 342.806px;
+}
+
+.popUpInner{
+  left: 50%;
+  right: 50%;
+  top: 25%;
+  bottom: 25%;
+  background: white;
+}
+
+.sendbutton{
+width: 20%;
+}
+
