--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -8,6 +8,7 @@
 .login form {
   padding: var(--spacing);
   border: solid 2px var(--secondary);
+  box-shadow: var(--shadow);
   border-radius: calc(var(--border-radius) * 2)
 }
 
