--- a/src/default.css
+++ b/src/default.css
@@ -23,6 +23,8 @@
   --border-radius: 6px;
   --border-width: 2px;
 
+  --shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
+
   --sidebar-width: 240px;
 }
 
@@ -158,19 +160,6 @@ input.valid{
   border-color : var(--success);
 }
 
-ul li{
-  background: var(--primary-dark);
-  border-color: var(--primary-dark);
-  color: var(--light);
-  font-size: var(--font-size);
-  padding: calc(var(--spacing) / 2) var(--spacing);
-  border-radius: var(--border-radius);
-  margin: var(--spacing-top-bottom);
-  cursor:pointer;
-  appearance: none;
-  width: auto;
-}
-
 input:focus,
 textarea:focus,
 button:focus,
@@ -178,3 +167,22 @@ a:focus {
   outline: none;
   box-shadow: 0px 0px 0px 2px var(--info);
 }
+
+/*the container must be positioned relative:*/
+.custom-select {
+  position: relative;
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  background: var(--white);
+  padding: 8px 16px;
+  border: none;
+  border-bottom:1px solid black;
+}
+
+/* turn it off completely */
+select:active, select:hover, select:focus, select:visited {
+  outline: none
+}
+
+
+
