--- a/src/default.css
+++ b/src/default.css
@@ -108,7 +108,8 @@ h6 {
 
 input,
 textarea,
-button {
+button,
+select {
   background: var(--light);
   border: solid var(--border-width) var(--secondary);
   border-radius: var(--border-radius);
@@ -118,6 +119,7 @@ button {
   width: 100%;
   margin: calc(var(--spacing) / 2) 0px;
   resize: none;
+  appearance: none;
 }
 
 input[type="submit"],
@@ -163,26 +165,17 @@ input.valid{
 input:focus,
 textarea:focus,
 button:focus,
-a:focus {
+select:focus,
+a:focus,
+a:focus li {
   outline: none;
   box-shadow: 0px 0px 0px 2px var(--info);
 }
 
-/*the container must be positioned relative:*/
 select {
-  position: relative;
-  font-family: var(--font-family);
-  font-size: var(--font-size);
-  background: var(--white);
-  padding: 8px 16px;
-  border: none;
-  border-bottom:1px solid black;
+  background: transparent;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 100%;
+  background-position-y: calc((var(--spacing) - 4px ) / 2);
 }
-
-/* turn it off completely */
-select:active, select:hover, select:focus, select:visited {
-  outline: none
-}
-
-
-
