--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -13,7 +13,7 @@
   display: block;
 }
 
-.center-image{
+.sidebar .center-image{
     display: block;
     margin-left: auto;
     margin-right: auto;
