--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -24,6 +24,15 @@
     width: 60px;
 }
 
+.sidebar .logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30px;
+    width: 30px;
+    margin-top: 30px;
+}
+
 .sidebar .menuItem{
   position: relative;
   display: block;
@@ -50,12 +59,12 @@
 }
 
 .sidebar h2{
-  font-size: 18px;
+  font-size: 14px;
   letter-spacing: 2px;
   color:white;
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 50px;
+  margin-top:0px;
+  margin-bottom: 20px;
 }
 
 .sidebar p{
